# whatsapp-status-reader

./: .env.example  .gitignore  .npmrc  README.md  app.py  config.js  config.js.example  ecosystem.config.js  index.js  main.py  nodemon.json  package.json  pnpm-workspace.yaml  pyproject.toml  test.js
.cache/session_backup/628882611841/: creds.json
.github/: FUNDING.yaml
.github/ISSUE_TEMPLATE/: config.yml  laporan-bug.md
.github/workflows/: comment-run.yml  nodejs.yml  stale.yml
config/: config.js  config.json  config.json.example  logger.js
database/: storyDb.js
events/: connectionEvents.js  messageEvents.js
lib/: client.js
services/: configService.js  userServices.js
src/: client.js  config.js  database.js  events.js  formatMessage.js  functions.js  handler.js  index.js  loadPlugins.js  logger.js  suppressLogs.js  utils.js
src/plugins/: autoPresence.js  autoReadAndReactStory.js  autoReadStory.js  autoReply.js  case.js  firstChat.js  githubStalk.js  logger.js  luminai.js  menu.js  npmSearch.js  ping.js  pushContact.js  readStatus.js  readViewOnce.js  sourceCode.js  stres.js  switchSetting.js  uptime.js
utils/: logHelpers.js  messageHandler.js  messageParser.js  pairingCodeHandler.js  question.js  socketHelper.js
