[project]
name = "whatsapp-status-reader"
version = "0.1.0"
description = "Aplikasi untuk membaca status WhatsApp menggunakan library Neonize. Mudah digunakan dan terintegrasi dengan API WhatsApp."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "neonize==0.3.14.post0",
    "protobuf>=6.33.1",
    "rich>=14.3.3",
]
