[project]
name = "whatsapp-status-reader"
version = "0.1.0"
description = "Aplikasi untuk membaca status WhatsApp menggunakan library Neonize. Mudah digunakan dan terintegrasi dengan API WhatsApp."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "neonize==0.4.1.post0",
    "qrcode>=8.2",
    "rich>=14.3.3",
]
